crates/jsonschema-codegen/tests/ui/invalid_pattern_options_backtrack_regex.rs
#[jsonschema::validator(
    schema = r#"{"type":"string"}"#,
    pattern_options = {
        engine = regex,
        backtrack_limit = 10,
    }
)]
struct Validator;

fn main() {}
